# guap_y2_h2_op_l5

./: CMakeLists.txt  README.md
docs/: 4432Кз_ГиппиусКГ_ЛР5.docx
include/: array_task.hpp
src/: array_task.cpp  main.cpp
